chromeos/components/camera_app_ui/resources/css/ptz_panel.css
/* Copyright 2021 The Chromium Authors. All rights reserved.
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

#panel-container {
  backdrop-filter: blur(10px);
  background: rgba(32, 33, 36, 0.9);
  border-radius: 4px;
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 1px 3px rgba(0, 0, 0, 0.3);
  overflow: hidden;
  position: absolute;
}

body.taking.video #panel-container {
  bottom: 24px;
  transition: bottom var(--fast1-duration);
}

#panel-container button {
  height: 48px;
  position: absolute;
  width: 48px;
}

#panel-container button:hover {
  background-color: rgba(255, 255, 255, 0.1);
}

#panel-container button:disabled::before {
  opacity: 0.38;
}

body:not(.has-pan-support) :is(#pan-left, #pan-right),
body:not(.has-tilt-support) :is(#tilt-up, #tilt-down),
body:not(.has-zoom-support) :is(#zoom-in, #zoom-out) {
  display: none;
}

#pan-left {
  --svg-width: 8px;
  --svg-height: 10px;
}

#pan-right {
  --svg-width: 8px;
  --svg-height: 10px;
}

#tilt-up {
  --svg-width: 12px;
  --svg-height: 8px;
}

#tilt-down {
  --svg-width: 12px;
  --svg-height: 8px;
}

#zoom-in {
  --svg-width: 16px;
  --svg-height: 16px;
}

#zoom-out {
  --svg-width: 16px;
  --svg-height: 16px;
}

/* Icons. */

#pan-left::before {
  content: url(/images/ptz_pan_left.svg);
}

#pan-right::before {
  content: url(/images/ptz_pan_right.svg);
}

#tilt-up::before {
  content: url(/images/ptz_tilt_up.svg);
}

#tilt-down::before {
  content: url(/images/ptz_tilt_down.svg);
}

#zoom-in::before {
  content: url(/images/ptz_zoom_in.svg);
}

#zoom-out::before {
  content: url(/images/ptz_zoom_out.svg);
}

#panel-container button::before {
  left: calc(50% - var(--svg-width) / 2);
  position: absolute;
  top: calc(50% - var(--svg-height) / 2);
}


/* Only P, Only Z */

body.has-pan-support:not(.has-tilt-support):not(.has-zoom-support) #panel-container,
body.has-zoom-support:not(.has-pan-support):not(.has-tilt-support) #panel-container {
  height: 48px;
  width: 96px;
}

body.has-pan-support:not(.has-tilt-support):not(.has-zoom-support) #pan-left,
body.has-zoom-support:not(.has-pan-support):not(.has-tilt-support) #zoom-in {
  left: 0;
}

body.has-pan-support:not(.has-tilt-support):not(.has-zoom-support) #pan-right,
body.has-zoom-support:not(.has-pan-support):not(.has-tilt-support) #zoom-out {
  right: 0;
}

/* Only T */

body:not(.has-pan-support).has-tilt-support:not(.has-zoom-support) #panel-container {
  height: 96px;
  width: 48px;
}

body:not(.has-pan-support).has-tilt-support:not(.has-zoom-support) #tilt-up {
  top: 0;
}

body:not(.has-pan-support).has-tilt-support:not(.has-zoom-support) #tilt-down {
  bottom: 0;
}

/* P, T */

body.has-pan-support.has-tilt-support:not(.has-zoom-support) #panel-container {
  height: 144px;
  width: 144px;
}

body.has-pan-support.has-tilt-support:not(.has-zoom-support) #pan-left {
  left: 0;
  top: 50%;
  transform: translateY(-50%);
}

body.has-pan-support.has-tilt-support:not(.has-zoom-support) #pan-right {
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

body.has-pan-support.has-tilt-support:not(.has-zoom-support) #tilt-up {
  left: 50%;
  top: 0;
  transform: translateX(-50%);
}

body.has-pan-support.has-tilt-support:not(.has-zoom-support) #tilt-down {
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
}

/* P, Z */

body.has-pan-support:not(.has-tilt-support).has-zoom-support #panel-container {
  height: 48px;
  width: 192px;
}

body.has-pan-support:not(.has-tilt-support).has-zoom-support #pan-left {
  left: 0;
}

body.has-pan-support:not(.has-tilt-support).has-zoom-support #pan-right {
  left: 75%;
}

body.has-pan-support:not(.has-tilt-support).has-zoom-support #zoom-in {
  left: 50%;
}

body.has-pan-support:not(.has-tilt-support).has-zoom-support #zoom-out {
  left: 25%;
}

/* T, Z */

body:not(.has-pan-support).has-tilt-support.has-zoom-support #panel-container {
  height: 144px;
  width: 96px;
}

body:not(.has-pan-support).has-tilt-support.has-zoom-support #tilt-up {
  left: 50%;
  top: 0;
  transform: translateX(-50%);
}

body:not(.has-pan-support).has-tilt-support.has-zoom-support #tilt-down {
  bottom: 0;
  left: 50%;
  transform: translateX(-50%);
}

body:not(.has-pan-support).has-tilt-support.has-zoom-support #zoom-out {
  left: 0;
  top: 50%;
  transform: translateY(-50%);
}

body:not(.has-pan-support).has-tilt-support.has-zoom-support #zoom-in {
  right: 0;
  top: 50%;
  transform: translateY(-50%);
}

/* P, T, Z */

body.has-pan-support.has-tilt-support.has-zoom-support #panel-container {
  border-radius: 20px;
  height: 192px;
  width: 192px;
}

/* TODO(b/172881094): Polish active visual look of clipped button. */

body.has-pan-support.has-tilt-support.has-zoom-support #panel-container button {
  height: 100%;
  width: 100%;
}

body.has-pan-support.has-tilt-support.has-zoom-support #panel-container button::before {
  left: var(--x);
  top: var(--y);
}

body.has-pan-support.has-tilt-support.has-zoom-support #tilt-down {
  --x: calc(calc(192px - var(--svg-width)) / 2);
  --y: calc(48px * 3 + calc(48px - var(--svg-height)) / 2);

  clip-path: path('M 0 192 L 192 192 L 123 123 A 38 38 0 0 1 69 123 Z');
}

body.has-pan-support.has-tilt-support.has-zoom-support #tilt-up {
  --x: calc(calc(192px - var(--svg-width)) / 2);
  --y: calc(calc(48px - var(--svg-height)) / 2);

  clip-path: path('M 0 0 L 192 0 L 123 69 A 38 38 0 0 0 69 69 Z');
}

body.has-pan-support.has-tilt-support.has-zoom-support #pan-left {
  --x: calc(calc(48px - var(--svg-width)) / 2);
  --y: calc(calc(192px - var(--svg-height)) / 2);

  clip-path: path('M 0 0 L 0 192 L 69 123 A 38 38 0 0 1 69 69 Z');
}

body.has-pan-support.has-tilt-support.has-zoom-support #pan-right {
  --x: calc(48px * 3 + calc(48px - var(--svg-width)) / 2);
  --y: calc(calc(192px - var(--svg-height)) / 2);

  clip-path: path('M 192 0 L 192 192 L 123 123 A 38 38 0 0 0 123 69 Z');
}

body.has-pan-support.has-tilt-support.has-zoom-support :is(#zoom-in, #zoom-out) {
  z-index: 1;
}

body.has-pan-support.has-tilt-support.has-zoom-support #zoom-in {
  --x: calc(48px * 2 + 16px);
  --y: calc(calc(192px - var(--svg-height)) / 2);

  clip-path: path('M 96 134 L 96 58 A 38 38 0 0 1 96 134 Z');
}

body.has-pan-support.has-tilt-support.has-zoom-support #zoom-out {
  --x: calc(48px * 2 - 16px - var(--svg-width));
  --y: calc(calc(192px - var(--svg-height)) / 2);

  clip-path: path('M 96 134 L 96 58 A 38 38 0 0 0 96 134 Z');
}

/* Focus ring. */

#panel-container button:focus::after {
  --ring-radius: calc(max(var(--svg-width), var(--svg-height)) / 2 + 4px);

  border-radius: 50%;
  height: calc(var(--ring-radius) * 2);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: calc(var(--ring-radius) * 2);
}

body.has-pan-support.has-tilt-support.has-zoom-support #panel-container button:focus::after {
  left: calc(var(--x) + var(--svg-width) / 2);
  top: calc(var(--y) + var(--svg-height) / 2);
}

/* Divider lines. */

/* TODO(b/184712316): Fix split line other P, T, Z cases. */
body:is(:not(.has-pan-support), :not(.has-tilt-support), :not(.has-zoom-support)) .ptz-divider {
  display: none;
}

.ptz-divider {
  background: rgba(95, 99, 104, 0.38);
  position: absolute;
  width: 1px;
}

#ptz-divider1 {
  left: 0;
  top: 0;
  transform: rotate(-45deg);
  transform-origin: left top;
}

#ptz-divider2 {
  right: 0;
  top: 0;
  transform: rotate(45deg);
  transform-origin: right top;
}

#ptz-divider3 {
  bottom: 0;
  left: 0;
  transform: rotate(45deg);
  transform-origin: left bottom;
}

#ptz-divider4 {
  bottom: 0;
  right: 0;
  transform: rotate(-45deg);
  transform-origin: right bottom;
}

#ptz-zoom-divider {
  height: 36px;
  left: 50%;
  top: 50%;
  transform: translateY(-50%);
}

body.has-pan-support.has-tilt-support.has-zoom-support .ptz-divider {
  height: 98px;
}

